--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -291,8 +291,6 @@
   padding-bottom: 15px;
   padding-left: 25px;
 
-  width: 60%;
-
   background-color: @main-color;
   color: #fff;
   border-color: @main-color;
@@ -431,6 +429,7 @@
 }
 
 @media (min-width: 620px) {
+
   .btn--call-back-nav {
     display: none;
   }
@@ -453,5 +452,9 @@
   .btn--callback {
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+
+  .btn--buy {
+    width: 60%;
   }
 }
