--- a/less/style.less
+++ b/less/style.less
@@ -24,9 +24,11 @@
 @import "blocks/infographics.less";
 @import "blocks/introduction.less";
 @import "blocks/main.less";
+@import "blocks/modal-payment.less";
 @import "blocks/nav.less";
 @import "blocks/our-products.less";
 @import "blocks/payment-and-shipping.less";
+@import "blocks/payment-successful.less";
 @import "blocks/privacy-police.less";
 @import "blocks/product-aquel-1000.less";
 @import "blocks/product-aquel-200.less";
