--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -86,6 +86,8 @@
   padding-bottom: 5px;
   text-align: center;
 
+  font-weight: 600;
+
   border-radius: 4px;
   box-shadow: 1px 0px 10px 0px #00a3ec;
 
