--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -152,7 +152,7 @@
   padding-top: 100px;
   padding-bottom: 50px;
 
-  background-image: url(../../img/slider-lead-bg.png);
+  background-image: url(../img/slider-lead-bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -307,10 +307,6 @@
   font-size: 30px;
 }
 
-.introduction__content--privacy-police {
-
-}
-
 .introduction--warranty-and-service {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -324,19 +320,12 @@
   font-size: 30px;
 }
 
-.introduction__content--warranty-and-service {
-
-}
 
 .introduction--certificate {
   padding-top: 20px;
   padding-bottom: 20px;
 
   background-color: #f7f7f7;
-}
-
-.introduction__content--certificate {
-
 }
 
 .introduction--blog {
@@ -395,14 +384,6 @@
   background-color: @main-color;
 }
 
-.introduction__content--blog-single {
-
-}
-
-.introduction--blog-single .introduction__aquel-title {
-
-}
-
 .introduction--acquired {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -453,46 +434,6 @@
 }
 
 @media (min-width: 768px) {
-
-  .introduction {
-
-  }
-
-  .introduction--about-us {
-
-  }
-
-  .introduction--tehnology {
-
-  }
-
-  .introduction--payment-and-shipping {
-
-  }
-
-  .introduction--privacy-police {
-
-  }
-
-  .introduction--warranty-and-service {
-
-  }
-
-  .introduction--blog {
-
-  }
-
-  .introduction--blog-single {
-
-  }
-
-  .introduction--acquired {
-
-  }
-
-  .introduction--brand-aquel {
-
-  }
 
   .introduction--privacy-police .introduction__title {
     font-size: 32px;
