--- a/less/blocks/product-aquel-200.less
+++ b/less/blocks/product-aquel-200.less
@@ -1,7 +1,3 @@
-.product-aquel-200 {
-
-}
-
 .product-aquel-200__title {
   width: 100%;
 
@@ -17,7 +13,6 @@
   background-color: @main-color;
 
   text-align: center;
-
 }
 
 .aquel-200-wrapper {
@@ -91,7 +86,7 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/like.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -112,7 +107,7 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/good-price.png);
+  background-image: url(../img/icon/good-price.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -133,7 +128,7 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/easy-shopping.png);
+  background-image: url(../img/icon/easy-shopping.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
