--- a/less/blocks/single-product.less
+++ b/less/blocks/single-product.less
@@ -96,7 +96,7 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/like.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -121,10 +121,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/carts.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 38px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -146,10 +146,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/wrench.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 43px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -190,7 +190,7 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/like.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -211,10 +211,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/carts.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 38px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -232,10 +232,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/wrench.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 43px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -267,7 +267,7 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/like.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -288,10 +288,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/carts.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 38px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -309,10 +309,10 @@
   left: -50px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/not-wrench.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 43px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
