--- a/less/blocks/welcome-to-shop-slider.less
+++ b/less/blocks/welcome-to-shop-slider.less
@@ -82,9 +82,13 @@
 
   .carousel-indicators {
     display: block;
+    margin-left: 0;
+    width: 100px;
+    left: initial;
+    right: 15%;
   }
 
   .carousel-inner {
-    height: auto;
+    height: 350px;
   }
 }
