--- a/less/blocks/work-process.less
+++ b/less/blocks/work-process.less
@@ -127,10 +127,6 @@
   background-color: @main-color;
 }
 
-.work-process__item-one {
-
-}
-
 .work-process__item-two img {
   padding-top: 33px;
   padding-bottom: 33px;
@@ -139,10 +135,6 @@
 .work-process__item-two .work-process__content::before,
 .work-process__item-two .work-process__content::after {
   left: 35%;
-}
-
-.work-process__item-three {
-
 }
 
 .work-process__subtitle {
@@ -161,14 +153,11 @@
 
 .work-process__consultation .btn--callback {
   display: block;
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
 
   margin: 0 auto;
   text-align: center;
-}
-
-@media (min-width: 550px) {
-
 }
 
 @media (min-width: 700px) {
