--- a/less/blocks/body.less
+++ b/less/blocks/body.less
@@ -1,18 +1,18 @@
 @font-face {
   font-family: "ProximaNova";
-  src: url("../../fonts/ProximaNova-Reg.otf");
+  src: url("../fonts/ProximaNova-Reg.otf");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "ProximaNova";
-  src: url("../../fonts/ProximaNova-Light.otf");
+  src: url("../fonts/ProximaNova-Light.otf");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "ProximaNova";
-  src: url("../../fonts/ProximaNova-Bold.otf");
+  src: url("../fonts/ProximaNova-Bold.otf");
   font-weight: bold;
 }
 
