--- a/less/blocks/product-aquel-zero.less
+++ b/less/blocks/product-aquel-zero.less
@@ -1,7 +1,3 @@
-.product-aquel-zero {
-
-}
-
 .product-aquel-zero__title {
   width: 100%;
 
@@ -90,7 +86,7 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/like.png);
+  background-image: url(../img/icon/like.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
@@ -111,10 +107,10 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/good-price.png);
+  background-image: url(../img/icon/padlock.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px;
+  background-size: 45px;
 
   box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
   border-radius: 50%;
@@ -132,7 +128,7 @@
   left: -40px;
 
   background-color: #fff;
-  background-image: url(../../img/icon/easy-shopping.png);
+  background-image: url(../img/icon/easy-shopping.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60px;
