--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -87,17 +87,24 @@
 .tehnology-review__tabs {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
   flex-wrap: wrap;
 
+  width: 100%;
   margin-bottom: 10px;
+
+  padding-left: 0;
+  list-style: none;
 
   text-align: center;
   background-color: #f9f9f9;
 }
 
 .tehnology-review__tabs li a {
+  margin: 0;
+  padding: 10px 15px;
+
   font-size: 13px;
+  text-decoration: none;
 }
 
 .tehnology-review__tabs li {
