--- a/less/blocks/work-process.less
+++ b/less/blocks/work-process.less
@@ -57,6 +57,7 @@
   width: 100%;
   height: 2px;
 
+  left: 0;
   bottom: 0;
 
   background-color: @main-color;
@@ -154,7 +155,7 @@
 .work-process__consultation .btn--callback {
   display: block;
   width: 100%;
-  max-width: 350px;
+  max-width: 310px;
 
   margin: 0 auto;
   text-align: center;
